[tool.poetry]
name = "playground-s04-e11-mental-health"
version = "0.1.0"
description = ""
authors = ["sbhodgy <scottbrianhodgins@yahoo.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.17"
jupyter = "^1.1.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
lightgbm = "^4.5.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
